[project]
name = "gameinproton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
